// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLevel Renders elevated risk correctly. 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__alert emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Elevated
  </span>
</div>
`;

exports[`RiskLevel Renders highest risk correctly. 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__danger emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Highest
  </span>
</div>
`;

exports[`RiskLevel Renders normal risk correctly. 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__success emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Normal
  </span>
</div>
`;

exports[`RiskLevel Renders not assessed risk correctly. 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  font-size: calc((12 / 13) * 13px);
  font-weight: normal;
  line-height: 16px;
}

<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    N/A
  </span>
</div>
`;
